--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "sequelize": "^6.2.3",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
